Added keycloak to backend